crates/agentprof-adapters/tests/snapshots/episode_derive__episode__builtin-tools-only.snap
---
source: crates/agentprof-adapters/tests/episode_derive.rs
assertion_line: 48
expression: episodes
---
{
  "turns": [
    {
      "id": "00000000-0000-0000-0000-000000000032",
      "started_at": "2026-05-26T11:00:02Z",
      "ended_at": "2026-05-26T11:00:08Z",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 20,
      "status": "Completed",
      "tool_calls": [
        {
          "name": "bash",
          "index": 0
        },
        {
          "name": "str_replace_editor",
          "index": 0
        }
      ],
      "hook_calls": [],
      "skill_calls": []
    }
  ],
  "tools": {
    "bash": {
      "name": "bash",
      "source": {
        "kind": "builtin"
      },
      "calls": [
        {
          "span": {
            "started_at": "2026-05-26T11:00:04Z",
            "ended_at": "2026-05-26T11:00:05Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000032",
          "status": "Success",
          "user_requested": false,
          "arguments": {
            "command": "ls"
          }
        }
      ],
      "total_duration": [
        1,
        0
      ],
      "fail_count": 0
    },
    "str_replace_editor": {
      "name": "str_replace_editor",
      "source": {
        "kind": "builtin"
      },
      "calls": [
        {
          "span": {
            "started_at": "2026-05-26T11:00:06Z",
            "ended_at": "2026-05-26T11:00:07Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000032",
          "status": "Success",
          "user_requested": false,
          "arguments": {
            "new_str": "b",
            "old_str": "a",
            "path": "/tmp/agentprof-fixture/builtin-tools-only/x.rs"
          }
        }
      ],
      "total_duration": [
        1,
        0
      ],
      "fail_count": 0
    }
  },
  "hooks": {},
  "skills": {},
  "mode_segments": [
    {
      "mode": "Interactive",
      "started_at": "2026-05-26T11:00:00Z",
      "ended_at": "2026-05-26T11:00:09Z"
    }
  ],
  "aborts": [],
  "warnings": []
}
