crates/agentprof-adapters/tests/snapshots/episode_derive__episode__cross-turn-tool.snap
---
source: crates/agentprof-adapters/tests/episode_derive.rs
expression: episodes
---
{
  "turns": [
    {
      "id": "turn-A",
      "started_at": "2026-05-29T01:00:01Z",
      "ended_at": "2026-05-29T01:00:03Z",
      "model": null,
      "mode": "Interactive",
      "output_tokens": null,
      "status": "Completed",
      "tool_calls": [
        {
          "name": "bash",
          "index": 0
        }
      ],
      "hook_calls": [],
      "skill_calls": []
    },
    {
      "id": "turn-B",
      "started_at": "2026-05-29T01:00:04Z",
      "ended_at": "2026-05-29T01:00:08Z",
      "model": null,
      "mode": "Interactive",
      "output_tokens": null,
      "status": "Completed",
      "tool_calls": [],
      "hook_calls": [],
      "skill_calls": []
    }
  ],
  "tools": {
    "bash": {
      "name": "bash",
      "source": {
        "kind": "builtin"
      },
      "calls": [
        {
          "span": {
            "started_at": "2026-05-29T01:00:02Z",
            "ended_at": "2026-05-29T01:00:07Z"
          },
          "turn_id": "turn-A",
          "status": "Success",
          "user_requested": false
        }
      ],
      "total_duration": [
        5,
        0
      ],
      "fail_count": 0
    }
  },
  "hooks": {},
  "skills": {},
  "mode_segments": [
    {
      "mode": "Interactive",
      "started_at": "2026-05-29T01:00:00Z",
      "ended_at": "2026-05-29T01:00:08Z"
    }
  ],
  "aborts": [],
  "warnings": []
}
