crates/agentprof-adapters/tests/snapshots/episode_derive__episode__live-truncated.snap
---
source: crates/agentprof-adapters/tests/episode_derive.rs
expression: episodes
---
{
  "turns": [
    {
      "id": "00000000-0000-0000-0000-000000000072",
      "started_at": "2026-05-26T15:00:02Z",
      "ended_at": null,
      "model": null,
      "mode": null,
      "output_tokens": null,
      "status": "Open",
      "tool_calls": [],
      "hook_calls": [],
      "skill_calls": []
    }
  ],
  "tools": {},
  "hooks": {},
  "skills": {},
  "mode_segments": [
    {
      "mode": {
        "Unknown": "default"
      },
      "started_at": "2026-05-26T15:00:00Z",
      "ended_at": "2026-05-26T15:00:02Z"
    }
  ],
  "aborts": [],
  "warnings": []
}
