crates/agentprof-adapters/tests/snapshots/episode_derive__episode__minimal.snap
---
source: crates/agentprof-adapters/tests/episode_derive.rs
expression: episodes
---
{
  "turns": [
    {
      "id": "00000000-0000-0000-0000-000000000012",
      "started_at": "2026-05-26T10:00:02Z",
      "ended_at": "2026-05-26T10:00:04Z",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 10,
      "status": "Completed",
      "tool_calls": [],
      "hook_calls": [],
      "skill_calls": []
    }
  ],
  "tools": {},
  "hooks": {},
  "skills": {},
  "mode_segments": [
    {
      "mode": "Interactive",
      "started_at": "2026-05-26T10:00:00Z",
      "ended_at": "2026-05-26T10:00:05Z"
    }
  ],
  "aborts": [],
  "warnings": []
}
