crates/agentprof-adapters/tests/snapshots/episode_derive__episode__with-hooks-heavy.snap
---
source: crates/agentprof-adapters/tests/episode_derive.rs
expression: episodes
---
{
  "turns": [
    {
      "id": "00000000-0000-0000-0000-000000000062",
      "started_at": "2026-05-26T14:00:03Z",
      "ended_at": "2026-05-26T14:00:25Z",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 12,
      "status": "Completed",
      "tool_calls": [],
      "hook_calls": [
        {
          "name": "PostToolUse",
          "index": 0
        },
        {
          "name": "PreToolUse",
          "index": 0
        },
        {
          "name": "PostToolUse",
          "index": 1
        },
        {
          "name": "PreToolUse",
          "index": 1
        },
        {
          "name": "PostToolUse",
          "index": 2
        },
        {
          "name": "PreToolUse",
          "index": 2
        },
        {
          "name": "PostToolUse",
          "index": 3
        },
        {
          "name": "PreToolUse",
          "index": 3
        },
        {
          "name": "PostToolUse",
          "index": 4
        },
        {
          "name": "PreToolUse",
          "index": 4
        }
      ],
      "skill_calls": []
    },
    {
      "id": "00000000-0000-0000-0000-000000000085",
      "started_at": "2026-05-26T14:00:26Z",
      "ended_at": "2026-05-26T14:00:48Z",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 12,
      "status": "Completed",
      "tool_calls": [],
      "hook_calls": [
        {
          "name": "PostToolUse",
          "index": 5
        },
        {
          "name": "PreToolUse",
          "index": 5
        },
        {
          "name": "PostToolUse",
          "index": 6
        },
        {
          "name": "PreToolUse",
          "index": 6
        },
        {
          "name": "PostToolUse",
          "index": 7
        },
        {
          "name": "PreToolUse",
          "index": 7
        },
        {
          "name": "PostToolUse",
          "index": 8
        },
        {
          "name": "PreToolUse",
          "index": 8
        },
        {
          "name": "PostToolUse",
          "index": 9
        },
        {
          "name": "PreToolUse",
          "index": 9
        }
      ],
      "skill_calls": []
    },
    {
      "id": "00000000-0000-0000-0000-000000000108",
      "started_at": "2026-05-26T14:00:49Z",
      "ended_at": "2026-05-26T14:01:11Z",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 12,
      "status": "Completed",
      "tool_calls": [],
      "hook_calls": [
        {
          "name": "PostToolUse",
          "index": 10
        },
        {
          "name": "PreToolUse",
          "index": 10
        },
        {
          "name": "PostToolUse",
          "index": 11
        },
        {
          "name": "PreToolUse",
          "index": 11
        },
        {
          "name": "PostToolUse",
          "index": 12
        },
        {
          "name": "PreToolUse",
          "index": 12
        },
        {
          "name": "PostToolUse",
          "index": 13
        },
        {
          "name": "PreToolUse",
          "index": 13
        },
        {
          "name": "PostToolUse",
          "index": 14
        },
        {
          "name": "PreToolUse",
          "index": 14
        }
      ],
      "skill_calls": []
    }
  ],
  "tools": {},
  "hooks": {
    "PostToolUse": {
      "name": "PostToolUse",
      "calls": [
        {
          "span": {
            "started_at": "2026-05-26T14:00:05Z",
            "ended_at": "2026-05-26T14:00:06Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:09Z",
            "ended_at": "2026-05-26T14:00:10Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:13Z",
            "ended_at": "2026-05-26T14:00:14Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:17Z",
            "ended_at": "2026-05-26T14:00:18Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:21Z",
            "ended_at": "2026-05-26T14:00:22Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:28Z",
            "ended_at": "2026-05-26T14:00:29Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:32Z",
            "ended_at": "2026-05-26T14:00:33Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:36Z",
            "ended_at": "2026-05-26T14:00:37Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:40Z",
            "ended_at": "2026-05-26T14:00:41Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:44Z",
            "ended_at": "2026-05-26T14:00:45Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:51Z",
            "ended_at": "2026-05-26T14:00:52Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:55Z",
            "ended_at": "2026-05-26T14:00:56Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:59Z",
            "ended_at": "2026-05-26T14:01:00Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:01:03Z",
            "ended_at": "2026-05-26T14:01:04Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:01:07Z",
            "ended_at": "2026-05-26T14:01:08Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        }
      ],
      "total_duration": [
        15,
        0
      ],
      "failure_count": 0
    },
    "PreToolUse": {
      "name": "PreToolUse",
      "calls": [
        {
          "span": {
            "started_at": "2026-05-26T14:00:07Z",
            "ended_at": "2026-05-26T14:00:08Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:11Z",
            "ended_at": "2026-05-26T14:00:12Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:15Z",
            "ended_at": "2026-05-26T14:00:16Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:19Z",
            "ended_at": "2026-05-26T14:00:20Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:23Z",
            "ended_at": "2026-05-26T14:00:24Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000062",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:30Z",
            "ended_at": "2026-05-26T14:00:31Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:34Z",
            "ended_at": "2026-05-26T14:00:35Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:38Z",
            "ended_at": "2026-05-26T14:00:39Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:42Z",
            "ended_at": "2026-05-26T14:00:43Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:46Z",
            "ended_at": "2026-05-26T14:00:47Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000085",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:53Z",
            "ended_at": "2026-05-26T14:00:54Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:00:57Z",
            "ended_at": "2026-05-26T14:00:58Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:01:01Z",
            "ended_at": "2026-05-26T14:01:02Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:01:05Z",
            "ended_at": "2026-05-26T14:01:06Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        },
        {
          "span": {
            "started_at": "2026-05-26T14:01:09Z",
            "ended_at": "2026-05-26T14:01:10Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000108",
          "success": true,
          "synthesized_start": false
        }
      ],
      "total_duration": [
        15,
        0
      ],
      "failure_count": 0
    }
  },
  "skills": {},
  "mode_segments": [
    {
      "mode": "Interactive",
      "started_at": "2026-05-26T14:00:00Z",
      "ended_at": "2026-05-26T14:01:12Z"
    }
  ],
  "aborts": [],
  "warnings": []
}
