crates/agentprof-adapters/tests/snapshots/episode_derive__episode__with-mcp-calls.snap
---
source: crates/agentprof-adapters/tests/episode_derive.rs
assertion_line: 49
expression: episodes
---
{
  "turns": [
    {
      "id": "00000000-0000-0000-0000-000000000042",
      "started_at": "2026-05-26T12:00:02Z",
      "ended_at": "2026-05-26T12:00:08Z",
      "model": "gpt-5-mini",
      "mode": "Interactive",
      "output_tokens": 30,
      "status": "Completed",
      "tool_calls": [
        {
          "name": "mcp__github__search_issues",
          "index": 0
        },
        {
          "name": "mcp__filesystem__read_file",
          "index": 0
        }
      ],
      "hook_calls": [],
      "skill_calls": []
    }
  ],
  "tools": {
    "mcp__filesystem__read_file": {
      "name": "mcp__filesystem__read_file",
      "source": {
        "kind": "mcp",
        "server": "filesystem"
      },
      "calls": [
        {
          "span": {
            "started_at": "2026-05-26T12:00:06Z",
            "ended_at": "2026-05-26T12:00:07Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000042",
          "status": "Success",
          "user_requested": false,
          "arguments": {
            "path": "/tmp/x"
          }
        }
      ],
      "total_duration": [
        1,
        0
      ],
      "fail_count": 0
    },
    "mcp__github__search_issues": {
      "name": "mcp__github__search_issues",
      "source": {
        "kind": "mcp",
        "server": "github"
      },
      "calls": [
        {
          "span": {
            "started_at": "2026-05-26T12:00:04Z",
            "ended_at": "2026-05-26T12:00:05Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000000042",
          "status": "Success",
          "user_requested": false,
          "arguments": {
            "query": "label:bug"
          }
        }
      ],
      "total_duration": [
        1,
        0
      ],
      "fail_count": 0
    }
  },
  "hooks": {},
  "skills": {},
  "mode_segments": [
    {
      "mode": "Interactive",
      "started_at": "2026-05-26T12:00:00Z",
      "ended_at": "2026-05-26T12:00:09Z"
    }
  ],
  "aborts": [],
  "warnings": []
}
