crates/agentprof-adapters/tests/snapshots/episode_derive__episode__with-post-tool-use-hooks.snap
---
source: crates/agentprof-adapters/tests/episode_derive.rs
expression: episodes
---
{
  "turns": [
    {
      "id": "00000000-0000-0000-0000-000000002003",
      "started_at": "2026-05-29T02:00:01Z",
      "ended_at": "2026-05-29T02:00:04Z",
      "model": "claude-test",
      "mode": "Interactive",
      "output_tokens": 19,
      "status": "Completed",
      "tool_calls": [
        {
          "name": "bash",
          "index": 0
        }
      ],
      "hook_calls": [
        {
          "name": "postToolUse",
          "index": 0
        }
      ],
      "skill_calls": []
    }
  ],
  "tools": {
    "bash": {
      "name": "bash",
      "source": {
        "kind": "builtin"
      },
      "calls": [
        {
          "span": {
            "started_at": "2026-05-29T02:00:02Z",
            "ended_at": "2026-05-29T02:00:03Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000002003",
          "status": "Success",
          "user_requested": false
        }
      ],
      "total_duration": [
        1,
        0
      ],
      "fail_count": 0
    }
  },
  "hooks": {
    "postToolUse": {
      "name": "postToolUse",
      "calls": [
        {
          "span": {
            "started_at": "2026-05-29T02:00:03.500Z",
            "ended_at": "2026-05-29T02:00:03.700Z"
          },
          "turn_id": "00000000-0000-0000-0000-000000002003",
          "success": true,
          "synthesized_start": false
        }
      ],
      "total_duration": [
        0,
        200000000
      ],
      "failure_count": 0
    }
  },
  "skills": {},
  "mode_segments": [
    {
      "mode": "Interactive",
      "started_at": "2026-05-29T02:00:00Z",
      "ended_at": "2026-05-29T02:00:04Z"
    }
  ],
  "aborts": [],
  "warnings": []
}
